# amazonScraper

./: .env.dev  .gitignore  README.md  __main__.py  __main__1.py  client_secrets.json  config.py  downloadImages.py  imageClassification.py  loadText.py  makeVideo.py  pyproject.toml  requests  requirements.txt  textToAudio.py  textToAudioGoogle.py  textToAudioSpeechT5Processor.py  video.avi
data/: text copy.csv  text.csv
