[project]
name = "amazonScrapper"
version = "0.0.1"
authors = [
  { name="Rizwan", email="magento.guru@yahoo.com" },
]
description = "FScrap product details from amazon"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"